# ccpane

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cc-memory/: Cargo.toml
cc-memory-mcp/: Cargo.toml
cc-notify/: Cargo.toml
cc-panes-hook/: Cargo.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: claude_commands.rs  git_commands.rs  provider_commands.rs  settings_commands.rs  workspace_commands.rs
src-tauri/src/models/: history.rs  settings.rs  workspace.rs
src-tauri/src/repository/: history_file_repo.rs
src-tauri/src/services/: history_service.rs  hooks_service.rs  notification_service.rs  provider_service.rs  settings_service.rs  terminal_service.rs  workspace_service.rs  worktree_service.rs
src-tauri/src/utils/: claude_path.rs  git_command.rs  mod.rs  path_validator.rs
src-tauri/tests/: history_integration_test.rs
src/components/: BorderlessFloatingButton.tsx  DiffView.tsx  GitCloneDialog.tsx  JournalPanel.tsx  LocalHistoryPanel.tsx  MiniView.tsx  RecentChangesPanel.tsx  ScanImportDialog.tsx  SessionCleanerPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusIndicator.tsx  WorkspaceSwitcher.tsx  WorktreeManager.tsx
src/components/panes/: Panel.tsx  TabBar.tsx  TerminalView.tsx
src/components/settings/: ProviderSection.tsx  ShortcutsSection.tsx
src/components/sidebar/: SidebarFooter.tsx  WorkspaceDialogs.tsx  WorkspaceTree.tsx
src/components/ui/: context-menu.tsx  dialog.tsx
src/hooks/: useWindowControl.test.ts
src/i18n/locales/en/: common.json  dialogs.json  panes.json  settings.json  sidebar.json
src/i18n/locales/zh-CN/: common.json  dialogs.json  panes.json  settings.json  sidebar.json
src/services/: localHistoryService.test.ts  localHistoryService.ts  settingsService.ts  workspaceService.test.ts  workspaceService.ts
src/stores/: paneTreeHelpers.test.ts  paneTreeHelpers.ts  useDialogStore.test.ts  useDialogStore.ts  usePanesStore.ts  useWorkspacesStore.test.ts  useWorkspacesStore.ts
src/test/utils/: testData.ts
src/types/: index.ts  provider.ts  terminal.ts  workspace.ts
src/utils/: index.ts
