[package]
name = "cc-memory-mcp"
version = "0.94.0"
edition = "2021"
description = "MCP Server for CC-Panes Memory system"

[[bin]]
name = "cc-memory-mcp"
path = "src/main.rs"

[dependencies]
cc-memory = { path = "../cc-memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
