[package]
name = "cc-memory"
version = "0.94.0"
edition = "2021"
description = "Memory system for CC-Panes"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
