[package]
name = "cc-panes-hook"
version = "0.94.0"
edition = "2021"
description = "Claude Code hook binary for CC-Panes"

[[bin]]
name = "cc-panes-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = "0.4"
