[package]
name = "cc-panes"
version = "0.94.0"
description = "CC-Panes - Multi-instance split-pane manager for Claude Code"
authors = ["wuxiran"]
license = "GPL-3.0"
repository = "https://github.com/wuxiran/cc-panes"
homepage = "https://github.com/wuxiran/cc-panes"
keywords = ["claude-code", "terminal", "split-pane", "tauri"]
categories = ["development-tools", "gui"]
edition = "2021"

[lib]
name = "cc_panes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
which = "7"
notify = "7"
sha2 = "0.10"
walkdir = "2"
toml = "0.8"
urlencoding = "2"
similar = "2"
flate2 = "1"
encoding_rs = "0.8"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
